--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -14,6 +14,8 @@ application.secret="M3AX]IdIwB@wyn4uWkZ:qiAqNW1TGHOsiF@fSA7T?dohFAQu^mNAnbD<i19c
 # ~~~~~
 application.langs="en"
 
+include "play-authenticate/mine.conf"
+
 # Global object class
 # ~~~~~
 # Define the Global object class for this application.
