--- a/api/conf/play-authenticate/mine.conf
+++ b/api/conf/play-authenticate/mine.conf
@@ -46,11 +46,11 @@ play-authenticate {
   twitter {
     redirectUri {
       # Whether the redirect URI scheme should be HTTP or HTTPS (HTTP by default)
-      secure=false
+      #secure=true
 
       # You can use this setting to override the automatic detection
       # of the host used for the redirect URI (helpful if your service is running behind a CDN for example)
-      # host=yourdomain.com
+      host=julienbordellier.com
     }
 
     # Twitter credentials
@@ -58,8 +58,8 @@ play-authenticate {
     # if you want to use twitter as an authentication provider.
     # Get the credentials here: https://dev.twitter.com/docs/auth/oauth
     # Remove leading '#' after entering
-    consumerKey="R4KgS8mKMpWkZOxnWlJnZJU54"
-    consumerSecret="vXUM0fg5J9gHGibxfnkZMtOyf7Y8dIMcLm1hX7qnjrjYiMclVa"
+    consumerKey="bZN6eUVhicEk2pGtCLmgpDOpZ"
+    consumerSecret="knoxwHkx1Jqwjk352Kh2R99W4bouxBbYCWbAQFRkIAygqagndy"
   }
 
   # Settings for the linkedin-based authentication provider
@@ -105,8 +105,8 @@ play-authenticate {
     # if you want to use facebook as an authentication provider.
     # Get them here: https://developers.facebook.com/apps
     # Remove leading '#' after entering
-    # clientId=
-    # clientSecret=
+    clientId="369802269850689"
+    clientSecret="93645224a4b9a059e2015149abf6cb05"
   }
 
   # Settings for the google-based authentication provider
